--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span class="toggle-slider"></span>
                 </label>
             </div>
-            <a class="tittle" onclick="location.reload();">Calculator</a>
+            <a class="tittle" onclick="location.reload();">Mathematic Calculator</a>
             <img id="historybutton" src="./images/history.png">	
         </h1>
         <div class="calculator">
