--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <td><button>0</button></td>
                     <td><button style="font-weight: bold;">.</button></td>
                     <td><button>/</button></td>
-                    <td><button style="background-color: #25db72; font-weight: bold; color: #ecf0f1;">=</button></td>
+                    <td><button style="background-color: coral; font-weight: bold; color: #000000;">=</button></td>
                 </tr>
             </table>
             <hr style="max-width: 50vw;">
